--- a/.github/workflows/setup-versecrafter.yml
+++ b/.github/workflows/setup-versecrafter.yml
@@ -1,63 +1,26 @@
-name: versecrafter-setup
-on:
-  workflow_dispatch:
-  push:
-  pull_request:
+conda create -n versecrafter python=3.11 -y
+conda activate versecrafter
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# Install PyTorch
+conda install pytorch==2.3.0 torchvision==0.18.0 torchaudio==2.3.0 pytorch-cuda=12.1 -c pytorch -c nvidia -y 
 
-    # Важно: conda activation корректно работает, когда шаги идут в bash -el {0}
-    defaults:
-      run:
-        shell: bash -el {0}
+# Install Python dependencies
+pip install -r requirements.txt
 
-    steps:
-      - uses: actions/checkout@v4
+# Install MoGe
+pip install git+https://github.com/microsoft/MoGe.git
 
-      - name: Setup Miniconda + create env
-        uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-update-conda: true
-          activate-environment: versecrafter
-          python-version: "3.11"
-          auto-activate-base: false
+# Install Grounded-SAM-2
+cd inference/Grounded-SAM-2
+pip install -e .
+pip install --no-build-isolation -e grounding_dino
 
-      - name: Show conda info
-        run: |
-          conda info
-          python --version
+# Install flash attention
+pip install flash-attn --no-build-isolation
 
-      - name: Install PyTorch (CUDA 12.1)
-        run: |
-          conda install -y \
-            pytorch==2.3.0 torchvision==0.18.0 torchaudio==2.3.0 pytorch-cuda=12.1 \
-            -c pytorch -c nvidia
-
-      - name: Install Python deps
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Install MoGe
-        run: |
-          pip install "git+https://github.com/microsoft/MoGe.git"
-
-      - name: Install Grounded-SAM-2 (editable)
-        run: |
-          cd inference/Grounded-SAM-2
-          pip install -e .
-          pip install --no-build-isolation -e grounding_dino
-
-      - name: Install flash-attn
-        run: |
-          pip install flash-attn --no-build-isolation
-
-      - name: Install pytorch3d from source
-        run: |
-          cd ..
-          git clone https://github.com/facebookresearch/pytorch3d.git
-          cd pytorch3d
-          pip install --no-build-isolation .
-          cd ../VerseCrafter
+# Install pytorch3d
+cd ../../
+git clone https://github.com/facebookresearch/pytorch3d.git
+cd pytorch3d
+pip install --no-build-isolation .
+cd ../VerseCrafter
