--- a/.github/workflows/setup-versecrafter1.yml
+++ b/.github/workflows/setup-versecrafter1.yml
@@ -78,29 +78,27 @@ jobs:
           pip install git+https://github.com/microsoft/MoGe.git
 
       - name: Debug folders
-  run: |
-    pwd
-    ls -la
-    find . -maxdepth 3 -type d | sed 's|^\./||'
+        shell: bash
+        run: |
+          pwd
+          ls -la
+          find . -maxdepth 3 -type d -print
 
       - name: Install Grounded-SAM-2
-  shell: bash
-  run: |
-    source "$CONDA/etc/profile.d/conda.sh"
-    conda activate versecrafter
+        shell: bash
+        run: |
+          source "$CONDA/etc/profile.d/conda.sh"
+          conda activate versecrafter
 
-    # Option A: if it exists in repo
-    if [ -d "inference/Grounded-SAM-2" ]; then
-      cd inference/Grounded-SAM-2
-    # Option B: otherwise clone it
-    else
-      git clone https://github.com/IDEA-Research/Grounded-SAM-2.git
-      cd Grounded-SAM-2
-    fi
+          if [ -d "inference/Grounded-SAM-2" ]; then
+            cd inference/Grounded-SAM-2
+          else
+            git clone https://github.com/IDEA-Research/Grounded-SAM-2.git
+            cd Grounded-SAM-2
+          fi
 
-    pip install -e .
-    pip install --no-build-isolation -e grounding_dino
-
+          pip install -e .
+          pip install --no-build-isolation -e grounding_dino
 
       - name: Install flash-attn (optional)
         if: ${{ inputs.install_flash_attn == 'true' }}
